# libaktualizr-demo-app

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
configs/: custom.toml  secondary.json  simple.toml
src/: CMakeLists.txt  custom-pacman.cc  custom-secondary.cc  custom-secondary.h  example_pacman.cc  main.cc
